file(GLOB FUNCTIONS_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(FUNCTION_SRC ${FUNCTIONS_SRCS})
    get_filename_component(FUNCTION_NAME ${FUNCTION_SRC} NAME_WLE)
    matlab_add_mex(NAME ${FUNCTION_NAME} SRC ${FUNCTION_SRC} LINK_TO ${Matlab_LIBRARIES} moordyn)
    list(APPEND MOORDYNM_TARGETS ${FUNCTION_NAME})
endforeach()

install(TARGETS ${MOORDYNM_TARGETS}
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    RUNTIME DESTINATION bin
    INCLUDES DESTINATION include
)
