[build-system]
requires = ["setuptools>=61.0", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "moordyn"
version = "${MOORDYN_VERSION}"
authors = [
  { name="Jose Luis Cercos-Pita", email="jlc@core-marine.com" },
]
description = "Python wrapper for MoorDyn library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/FloatingArrayDesign/MoorDyn"
"Bug Tracker" = "https://github.com/FloatingArrayDesign/MoorDyn/issues" 
"Documentation" = "https://moordyn.readthedocs.io" 

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
